syntax = "proto3";
package iris.oracle;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos_proto/types.proto";

option go_package = "github.com/irisnet/irishub/modules/oracle/types";

// MsgCreateFeed defines an sdk.Msg type that supports creating a feed
message MsgCreateFeed {
    string feed_name = 1 [(gogoproto.moretags) = "yaml:\"feed_name\""];
    uint64 latest_history = 2 [(gogoproto.moretags) = "yaml:\"latest_history\""];
    string description = 3;
    bytes creator = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string service_name = 5 [(gogoproto.moretags) = "yaml:\"service_name\""];
    repeated bytes providers = 6 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string input = 7;
    int64 timeout = 8;
    repeated cosmos.Coin service_fee_cap = 9 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.moretags) = "yaml:\"service_fee_cap\""];
    uint64 repeated_frequency = 10 [(gogoproto.moretags) = "yaml:\"repeated_frequency\""];
    string aggregate_func = 11 [(gogoproto.moretags) = "yaml:\"aggregate_func\""];
    string value_json_path = 12 [(gogoproto.moretags) = "yaml:\"value_json_path\""];
    int32 response_threshold = 13 [(gogoproto.moretags) = "yaml:\"response_threshold\""];
}

// MsgPauseFeed defines an sdk.Msg type that supports stating a feed
message MsgStartFeed {
    string feed_name = 1 [(gogoproto.moretags) = "yaml:\"feed_name\""];
    bytes creator = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

// MsgPauseFeed defines an sdk.Msg type that supports pausing a feed
message MsgPauseFeed {
    string feed_name = 1 [(gogoproto.moretags) = "yaml:\"feed_name\""];
    bytes creator = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

// MsgEditFeed defines an sdk.Msg type that supports editing a feed
message MsgEditFeed {
    string feed_name = 1 [(gogoproto.moretags) = "yaml:\"feed_name\""];
    string description = 2;
    uint64 latest_history = 3 [(gogoproto.moretags) = "yaml:\"latest_history\""];
    repeated bytes providers = 4 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    int64 timeout = 5;
    repeated cosmos.Coin service_fee_cap = 6 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.moretags) = "yaml:\"service_fee_cap\""];
    uint64 repeated_frequency = 7 [(gogoproto.moretags) = "yaml:\"repeated_frequency\""];
    int32 response_threshold = 8 [(gogoproto.moretags) = "yaml:\"response_threshold\""];
    bytes creator = 9 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}